[package]
name = "burp-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hudsucker = {version="0.18.0",features=["full"]}
rustls-pemfile = "1.0.1"
tokio = { version = "1.6.1", features = ["full"] }
tokio-rustls = "0.23.0"
tokio-tungstenite = { version = "0.17.2" }
tokio-util = { version = "0.7.0", features = ["io"], optional = true }
tracing = "0.1"
tracing-subscriber = "0.2.0"
hyper-rustls = "0.23.1"
hyper = {version="0.14.23",features=["full"]}
rustyline = "10.0.0"
rustyline-derive = "0.7.0"
env_logger = "0.9.3"
url = "2.3.1"